# pikara

./: .coveragerc  .gitignore  .travis.yml  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
src/ogorek/: __init__.py  analysis.py
src/pikara/: analysis.py
tests/: compat.py  test_brine.py  test_compat.py  test_critique.py  test_opcodes.py  test_parse.py  test_pickledobject.py  test_typematchers.py
