[bdist_wheel]
universal = 1

[metadata]
# ensure LICENSE is included in wheel metadata
license_file = LICENSE

[tool:pytest]
minversion = 3.0
strict = true
addopts = -ra
testpaths = tests
filterwarnings =
    once::Warning

[isort]
atomic = true
not_skip = __init__.py
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 5
known_first_party = pikara
